recommend-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommend-service-app
  labels:
    app: recommend-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app : recommend-service-app
  template:
    metadata:
      labels:
        app: recommend-service-app
    spec:
      containers:
      - env: 
        - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
          value: http://35.182.129.253:32363/eureka/
        image: slawrencehcl/travel:recommend
        imagePullPolicy: Always
        name: recommend-service-app        

---

kind: Service
apiVersion: v1
metadata:
  name: recommend-service-svc
spec:
  type: NodePort
  selector:
    app: recommend-service-app
  ports:
  - port: 8095
